# iamtxtAttendance

./: CHANGELOG.md  Cargo.toml  README.md  _config.yml  build.rs
.github/workflows/: release.yml
assets/: icon.rc
src/: main.rs
src/libs/: bot.rs  botdir.rs  config.rs  mod.rs  status.rs
