[package]
name = "iamtxt"
version = "0.1.2"
edition = "2021"
description = "a tool for iamtxt"
default-run = "iamtxt"
readme = "README.md"
authors = ["AzureQAQ <azureqaq@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["cli", "bin"]
categories = ["command-line-utilities"]
build =  "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libs"
path = "./src/libs/mod.rs"


[dependencies]
log = "0"
# indicatif = "0"
# console = "0"
# dialoguer = "0"
# scraper = "0"
clap = {version = "4", features = ["wrap_help", "std", "color", "suggestions", "cargo"], default-features = false }
serde = {version = "*", features = ["derive"] }
toml = "0"
platform-dirs = "0"
# reqwest_cookie_store = "0"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "parking_lot"], default-features = false }
reqwest = { version = "0", features = ["cookies"] }
anyhow = "1"
# regex = { version = "1", features = ["std"] }
ahash = { version = "*", features = ["std", "compile-time-rng", "serde"] }
time = { version = "*" }
simple_logger = { version = "*", default-features = false, features = ["colors"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
pretty_assertions = "1"

 
[build-dependencies]
embed-resource =  "1"
